--- a/css/styles.scss
+++ b/css/styles.scss
@@ -136,6 +136,10 @@ nav {
             span {
                 display: inline-block;
             }
+
+            &:hover {
+                background-color: #cbca4c;
+            }
         }
     }
 
