--- a/css/styles.css
+++ b/css/styles.css
@@ -33,10 +33,12 @@ table {
 body {
   -webkit-text-size-adjust: none;
   font-family: 'Open Sans', sans-serif;
-  background-color: #edeef0; }
+  background-color: #f0f1f3; }
 
 input, a, button {
-  outline: none; }
+  outline: none;
+  color: inherit;
+  text-decoration: none; }
 
 a:focus {
   color: inherit;
@@ -62,18 +64,34 @@ button:disabled {
   border-right: 4px solid transparent;
   border-left: 4px solid transparent; }
 
+.invisible-element {
+  display: none; }
+
+.active {
+  background-color: #cbca4c; }
+
+.row {
+  display: flex;
+  margin-left: -25px;
+  margin-right: -25px; }
+
 nav {
   position: fixed;
   height: 80px;
   min-height: 80px;
   width: 100%;
-  background-color: #e6e53e;
-  font-size: 32px; }
+  background-color: #f0f317;
+  font-size: 18px; }
   nav .nav-wrapper {
     width: 70%;
     margin: auto;
     max-width: 1100px; }
+    @media (max-width: 768px) {
+      nav .nav-wrapper {
+        font-size: 0.9em;
+        width: 90%; } }
   nav .nav__left-side {
+    font-size: 1.6em;
     float: left;
     line-height: 80px; }
     nav .nav__left-side a {
@@ -84,29 +102,50 @@ nav {
       transition: all 0.3s; }
       nav .nav__left-side a img {
         float: left;
-        padding-right: 30px;
         padding: 10px; }
       nav .nav__left-side a span {
+        padding-left: 10px;
         float: left;
         color: #333; }
+        @media (max-width: 768px) {
+          nav .nav__left-side a span {
+            display: none; } }
       nav .nav__left-side a:hover {
         background-color: #cbca4c; }
   nav .nav__right-side {
     float: right; }
-    nav .nav__right-side a {
-      cursor: pointer; }
-      nav .nav__right-side a img {
+    nav .nav__right-side > a {
+      cursor: pointer;
+      transition: all 0.3s; }
+      nav .nav__right-side > a img {
         float: left; }
-      nav .nav__right-side a span {
+      nav .nav__right-side > a span {
         display: inline-block; }
-      nav .nav__right-side a:hover {
+      nav .nav__right-side > a:hover {
         background-color: #cbca4c; }
+    nav .nav__right-side ul {
+      background-color: #fcfcfc;
+      border: 1px solid #eee;
+      border-top: none;
+      box-shadow: 0 10px 15px 0 rgba(84, 83, 81, 0.68); }
+      nav .nav__right-side ul li {
+        padding: 8px 18px;
+        cursor: pointer;
+        border-bottom: 1px solid #eee;
+        font-size: 0.85em; }
+        nav .nav__right-side ul li:last-of-type {
+          border-top: 1px solid #eee;
+          border-bottom: none; }
+        nav .nav__right-side ul li:hover {
+          background-color: #eee; }
+        nav .nav__right-side ul li a {
+          color: #333;
+          text-decoration: none; }
   nav .nav__img-wrapper {
     display: block;
     position: relative;
     line-height: 50px;
-    padding: 15px;
-    font-size: 24px; }
+    padding: 15px; }
     nav .nav__img-wrapper img {
       max-height: 50px;
       border-radius: 40px; }
@@ -120,63 +159,107 @@ nav {
   width: 70%;
   max-width: 1100px;
   margin: auto; }
+  @media (max-width: 768px) {
+    .page-wrapper {
+      width: 90%; } }
   .page-wrapper .ideas-section {
     padding-top: 35px; }
+    @media (max-width: 768px) {
+      .page-wrapper .ideas-section {
+        padding-top: 17.5px; } }
     .page-wrapper .ideas-section .ideas-filter {
       display: inline-block; }
-      .page-wrapper .ideas-section .ideas-filter__current {
-        background-color: #e6e53e; }
+      .page-wrapper .ideas-section .ideas-filter__current, .page-wrapper .ideas-section .ideas-filter li:hover {
+        border-bottom: 3px solid #ddda4b; }
       .page-wrapper .ideas-section .ideas-filter li {
         display: inline-block;
         float: left;
-        padding: 10px 18px;
+        padding: 8px 14px;
         margin-right: 10px;
-        border-radius: 10px;
         cursor: pointer;
-        transition: all 0.5s; }
-        .page-wrapper .ideas-section .ideas-filter li:hover {
-          background-color: #e6e53e; }
-    .page-wrapper .ideas-section .idea {
-      background-color: #f9f9f9;
-      padding: 40px;
-      border-radius: 30px;
-      line-height: 1.4;
-      margin: 20px 0;
-      border: 2px solid #d9d9d9; }
-      .page-wrapper .ideas-section .idea__header {
-        padding-bottom: 60px;
-        font-weight: 600; }
-        .page-wrapper .ideas-section .idea__header__name {
-          font-size: 24px;
-          float: left; }
-        .page-wrapper .ideas-section .idea__header__rating {
-          float: right;
-          padding-right: 30px;
-          font-size: 20px; }
-          .page-wrapper .ideas-section .idea__header__rating .rating {
-            cursor: pointer;
-            font-weight: 800;
-            transition: all 0.2s; }
-            .page-wrapper .ideas-section .idea__header__rating .rating__plus:hover {
-              color: green; }
-            .page-wrapper .ideas-section .idea__header__rating .rating__minus:hover {
-              color: red; }
-      .page-wrapper .ideas-section .idea__text {
-        font-size: 16px; }
-      .page-wrapper .ideas-section .idea__footer {
-        padding: 15px 20px 10px 0;
-        line-height: 30px;
-        font-size: 18px;
-        color: #627588; }
-        .page-wrapper .ideas-section .idea__footer a {
-          cursor: pointer; }
-          .page-wrapper .ideas-section .idea__footer a:hover {
-            text-decoration: underline; }
-        .page-wrapper .ideas-section .idea__footer__full {
-          float: left; }
-        .page-wrapper .ideas-section .idea__footer__comments {
-          float: right;
-          padding-right: 10px; }
+        transition: all 0.1s; }
+  .page-wrapper .idea {
+    background-color: #fcfcfc;
+    padding: 40px;
+    line-height: 1.4;
+    margin: 50px 0;
+    box-shadow: 10px 10px 15px -10px #1b1c05;
+    font-size: 16px; }
+    @media (max-width: 768px) {
+      .page-wrapper .idea {
+        padding: 20px;
+        margin: 25px 0; }
+      .page-wrapper .idea__footer {
+        padding-bottom: 30px; } }
+    .page-wrapper .idea:first-of-type {
+      margin-top: 35px; }
+      @media (max-width: 768px) {
+        .page-wrapper .idea:first-of-type {
+          margin: 17.5px 0; } }
+    .page-wrapper .idea__header {
+      min-height: 40px;
+      font-weight: 600;
+      overflow: hidden;
+      clear: left; }
+      @media (max-width: 768px) {
+        .page-wrapper .idea__header {
+          font-size: 0.8em; } }
+      .page-wrapper .idea__header__name {
+        font-size: 1.8em;
+        float: left;
+        max-width: 75%; }
+      .page-wrapper .idea__header__rating {
+        border: 1px solid #d1d1d1;
+        background-color: #fdfdfd;
+        float: right;
+        font-size: 1.4em;
+        margin-right: 10px;
+        border-radius: 30px;
+        padding: 3px 15px; }
+        @media (max-width: 768px) {
+          .page-wrapper .idea__header__rating {
+            padding: 1px 2px;
+            margin-right: 0; } }
+        .page-wrapper .idea__header__rating span {
+          padding: 4px; }
+          @media (max-width: 768px) {
+            .page-wrapper .idea__header__rating span {
+              padding: 3px; } }
+        .page-wrapper .idea__header__rating .rating {
+          cursor: pointer;
+          font-weight: 800;
+          transition: all 0.2s; }
+          .page-wrapper .idea__header__rating .rating__plus {
+            color: green; }
+            .page-wrapper .idea__header__rating .rating__plus:hover {
+              color: #00c100; }
+          .page-wrapper .idea__header__rating .rating__minus {
+            color: #bc0000; }
+            .page-wrapper .idea__header__rating .rating__minus:hover {
+              color: #ff0000; }
+    .page-wrapper .idea__text {
+      padding-top: 20px; }
+    .page-wrapper .idea__footer {
+      padding: 20px 10px;
+      line-height: 30px;
+      font-size: 1.1em;
+      color: #627588;
+      display: block; }
+      @media (max-width: 768px) {
+        .page-wrapper .idea__footer {
+          padding-bottom: 25px; } }
+      .page-wrapper .idea__footer a {
+        cursor: pointer; }
+        .page-wrapper .idea__footer a:hover {
+          text-decoration: underline; }
+      .page-wrapper .idea__footer__full {
+        float: left; }
+      .page-wrapper .idea__footer__comments {
+        float: right;
+        padding-right: 10px; }
+      .page-wrapper .idea__footer hr {
+        width: 80%;
+        border: 1px solid #d9d9d9; }
   .page-wrapper .footer-hr {
     margin-top: 50px;
     width: 80%;
@@ -193,5 +276,32 @@ nav {
         padding-left: 15px; }
         .page-wrapper .page-footer__links li:first-of-type {
           border-right: 1px solid #d9d9d9; }
+        .page-wrapper .page-footer__links li a {
+          text-decoration: underline; }
+  .page-wrapper .single-idea-section .comments {
+    margin-top: 30px;
+    font-size: 1.2em;
+    color: #333; }
+    .page-wrapper .single-idea-section .comments .avatar {
+      flex-grow: 2; }
+      .page-wrapper .single-idea-section .comments .avatar .avatar-wrapper {
+        background: url(../img/profile.jpg);
+        background-position: center;
+        background-size: cover;
+        margin: 0 auto;
+        width: 100%;
+        height: 100%;
+        max-height: 100px;
+        max-width: 100px;
+        border: 1px solid #ddd;
+        border-radius: 100px; }
+    .page-wrapper .single-idea-section .comments .input-place {
+      flex-grow: 5; }
+      .page-wrapper .single-idea-section .comments .input-place textarea {
+        font-size: 1em;
+        width: 100%;
+        padding: 10px;
+        height: 100px;
+        border: 1px solid #ddd; }
 
 /*# sourceMappingURL=styles.css.map */
