--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,6 @@
-*, *:before, *:after { box-sizing: border-box; }
+*, *:before, *:after {
+    box-sizing: border-box;
+}
 
 /* Reset */
 
@@ -40,11 +42,13 @@ table {
 body {
     -webkit-text-size-adjust: none;
     font-family: 'Open Sans', sans-serif;
-    background-color: #edeef0;
+    background-color: #f0f1f3;
 }
 
 input, a, button {
     outline: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 a:focus {
@@ -71,15 +75,31 @@ button:disabled {
     margin-left: 2px;
     vertical-align: middle;
     border-top: 4px dashed;
-    border-top: 4px solid \9;
+    border-top: 4px solid \9
+;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
 }
 
+.invisible-element {
+    display: none;
+}
+
+.active {
+    background-color: #cbca4c;
+}
+
+.row {
+    display: flex;
+    margin-left: -25px;
+    margin-right: -25px;
+}
+
 $headerHeight: 80px;
-$navColor: #e6e53e;
+$navColor: #f0f317;
 $hrColor: #d9d9d9;
 $maxPageWidth: 1100px;
+$pageMobileWidth: 90%;
 
 nav {
     position: fixed;
@@ -87,15 +107,23 @@ nav {
     min-height: $headerHeight;
     width: 100%;
     background-color: $navColor;
-    font-size: 32px;
+    font-size: 18px;
 
     .nav-wrapper {
         width: 70%;
         margin: auto;
         max-width: $maxPageWidth;
+
+        @media (max-width: 768px) {
+            & {
+                font-size: 0.9em;
+                width: $pageMobileWidth;
+            }
+        }
     }
 
     .nav__left-side {
+        font-size: 1.6em;
         float: left;
         line-height: $headerHeight;
 
@@ -108,13 +136,19 @@ nav {
 
             img {
                 float: left;
-                padding-right: 30px;
                 padding: 10px;
             }
 
             span {
+                padding-left: 10px;
                 float: left;
                 color: #333;
+
+                @media (max-width: 768px) {
+                    & {
+                        display: none;
+                    }
+                }
             }
 
             &:hover {
@@ -126,8 +160,9 @@ nav {
     .nav__right-side {
         float: right;
 
-        a {
+        & > a {
             cursor: pointer;
+            transition: all 0.3s;
 
             img {
                 float: left;
@@ -141,6 +176,34 @@ nav {
                 background-color: #cbca4c;
             }
         }
+
+        ul {
+            background-color: #fcfcfc;
+            border: 1px solid #eee;
+            border-top: none;
+            box-shadow: 0 10px 15px 0 rgba(84, 83, 81, 0.68);
+
+            li {
+                padding: 8px 18px;
+                cursor: pointer;
+                border-bottom: 1px solid #eee;
+                font-size: 0.85em;
+
+                &:last-of-type {
+                    border-top: 1px solid #eee;
+                    border-bottom: none;
+                }
+
+                &:hover {
+                    background-color: #eee;
+                }
+
+                a {
+                    color: #333;
+                    text-decoration: none;
+                }
+            }
+        }
     }
 
     .nav__img-wrapper {
@@ -148,7 +211,6 @@ nav {
         position: relative;
         line-height: $headerHeight - 30px;
         padding: 15px;
-        font-size: 24px;
 
         img {
             max-height: $headerHeight - 30px;
@@ -171,95 +233,175 @@ nav {
     max-width: $maxPageWidth;
     margin: auto;
 
+    @media (max-width: 768px) {
+        & {
+            width: $pageMobileWidth;
+        }
+    }
+
+    $pad: 35px;
+
     .ideas-section {
-        $pad: 40px;
-        padding-top: 35px;
+        padding-top: $pad;
+
+        @media (max-width: 768px) {
+            & {
+                padding-top: $pad / 2;
+            }
+        }
 
         .ideas-filter {
             display: inline-block;
 
-            &__current {
-                background-color: $navColor;
+            &__current, li:hover {
+                border-bottom: 3px solid #ddda4b;
             }
 
             li {
                 display: inline-block;
                 float: left;
-                padding: 10px 18px;
+                padding: 8px 14px;
                 margin-right: 10px;
-                border-radius: 10px;
                 cursor: pointer;
-                transition: all 0.5s;
+                transition: all 0.1s;
+            }
+        }
+    }
 
-                &:hover {
-                    background-color: $navColor;
+    .idea {
+        background-color: #fcfcfc;
+        padding: 40px;
+        line-height: 1.4;
+        margin: 50px 0;
+        box-shadow: 10px 10px 15px -10px rgba(27, 28, 5, 1);
+        font-size: 16px;
+
+        @media (max-width: 768px) {
+            & {
+                padding: 20px;
+                margin: 25px 0;
+            }
+
+            &__footer {
+                padding-bottom: 30px;
+            }
+        }
+
+        &:first-of-type {
+            margin-top: $pad;
+
+            @media (max-width: 768px) {
+                & {
+                    margin: $pad / 2 0;
                 }
             }
         }
 
-        .idea {
-            background-color: #f9f9f9;
-            padding: 40px;
-            border-radius: 30px;
-            line-height: 1.4;
-            margin: $pad / 2 0;
-            border: 2px solid $hrColor;
+        &__header {
+            min-height: 40px;
+            font-weight: 600;
+            overflow: hidden;
+            clear: left;
 
-            &__header {
-                padding-bottom: 60px;
-                font-weight: 600;
+            @media (max-width: 768px) {
+                & {
+                    font-size: 0.8em;
+                }
+            }
 
-                &__name {
-                    font-size: 24px;
-                    float: left;
+            &__name {
+                font-size: 1.8em;
+                float: left;
+                max-width: 75%;
+            }
+
+            &__rating {
+                border: 1px solid #d1d1d1;
+                background-color: #fdfdfd;
+                float: right;
+                font-size: 1.4em;
+                margin-right: 10px;
+                border-radius: 30px;
+                padding: 3px 15px;
+
+                @media (max-width: 768px) {
+                    & {
+                        padding: 1px 2px;
+                        margin-right: 0;
+                    }
                 }
 
-                &__rating {
-                    float: right;
-                    padding-right: 30px;
-                    font-size: 20px;
+                span {
+                    padding: 4px;
 
-                    .rating {
-                        cursor: pointer;
-                        font-weight: 800;
-                        transition: all 0.2s;
-
-                        &__plus:hover {
-                            color: green;
-                        }
-                        &__minus:hover {
-                            color: red;
+                    @media (max-width: 768px) {
+                        & {
+                            padding: 3px;
                         }
                     }
                 }
-            }
 
-            &__text {
-                font-size: 16px;
-            }
-
-            &__footer {
-                padding: 15px 20px 10px 0;
-                line-height: 30px;
-                font-size: 18px;
-                color: #627588;
-
-                a {
+                .rating {
                     cursor: pointer;
+                    font-weight: 800;
+                    transition: all 0.2s;
 
-                    &:hover {
-                        text-decoration: underline;
+                    &__plus {
+                        color: green;
+
+                        &:hover {
+                            color: #00c100;
+                        }
+                    }
+
+                    &__minus {
+                        color: #bc0000;
+
+                        &:hover {
+                            color: #ff0000;
+                        }
                     }
                 }
+            }
+        }
 
-                &__full {
-                    float: left;
-                }
+        &__text {
+            padding-top: 20px;
+        }
 
-                &__comments {
-                    float: right;
-                    padding-right: 10px;
+        &__footer {
+            padding: 20px 10px;
+            line-height: 30px;
+            font-size: 1.1em;
+            color: #627588;
+            display: block;
+
+            @media (max-width: 768px) {
+                & {
+                    padding-bottom: 25px;
                 }
+            }
+
+            a {
+                cursor: pointer;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+
+            &__full {
+                float: left;
+            }
+
+            &__comments {
+                float: right;
+                padding-right: 10px;
+            }
+
+            hr {
+                width: 80%;
+                border: 1px solid $hrColor;
             }
         }
     }
@@ -286,8 +428,49 @@ nav {
                 &:first-of-type {
                     border-right: 1px solid $hrColor;
                 }
+
+                a {
+                    text-decoration: underline;
+                }
             }
         }
     }
 
+    .single-idea-section {
+
+        .comments {
+            margin-top: 30px;
+            font-size: 1.2em;
+            color: #333;
+
+            .avatar {
+                flex-grow: 2;
+
+                .avatar-wrapper {
+                    background: url(../img/profile.jpg);
+                    background-position: center;
+                    background-size: cover;
+                    margin: 0 auto;
+                    width: 100%;
+                    height: 100%;
+                    max-height: 100px;
+                    max-width: 100px;
+                    border: 1px solid #ddd;
+                    border-radius: 100px;
+                }
+            }
+
+            .input-place {
+                flex-grow: 5;
+
+                textarea {
+                    font-size: 1em;
+                    width: 100%;
+                    padding: 10px;
+                    height: 100px;
+                    border: 1px solid #ddd;
+                }
+            }
+        }
+    }
 }
