--- a/css/styles.css
+++ b/css/styles.css
@@ -72,8 +72,12 @@ button:disabled {
 
 .row {
   display: flex;
+  align-items: stretch;
   margin-left: -25px;
   margin-right: -25px; }
+
+.mockup-full-width {
+  flex: 10 !important; }
 
 nav {
   position: fixed;
@@ -81,7 +85,8 @@ nav {
   min-height: 80px;
   width: 100%;
   background-color: #f0f317;
-  font-size: 18px; }
+  font-size: 18px;
+  box-shadow: 0 1px 5px 0 rgba(84, 83, 81, 0.68); }
   nav .nav-wrapper {
     width: 70%;
     margin: auto;
@@ -129,16 +134,17 @@ nav {
       border-top: none;
       box-shadow: 0 10px 15px 0 rgba(84, 83, 81, 0.68); }
       nav .nav__right-side ul li {
-        padding: 8px 18px;
         cursor: pointer;
         border-bottom: 1px solid #eee;
-        font-size: 0.85em; }
+        font-size: 0.8em; }
         nav .nav__right-side ul li:last-of-type {
           border-top: 1px solid #eee;
           border-bottom: none; }
         nav .nav__right-side ul li:hover {
           background-color: #eee; }
         nav .nav__right-side ul li a {
+          display: block;
+          padding: 8px 18px;
           color: #333;
           text-decoration: none; }
   nav .nav__img-wrapper {
@@ -238,7 +244,58 @@ nav {
             .page-wrapper .idea__header__rating .rating__minus:hover {
               color: #ff0000; }
     .page-wrapper .idea__text {
-      padding-top: 20px; }
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      margin-top: 20px; }
+      .page-wrapper .idea__text h1 {
+        font-size: 1.4em;
+        font-weight: 600; }
+      .page-wrapper .idea__text h2 {
+        font-size: 1.2em;
+        font-weight: 600; }
+      .page-wrapper .idea__text h3 {
+        margin: 5px 0;
+        font-size: 1em;
+        font-weight: 600; }
+      .page-wrapper .idea__text__main {
+        margin-bottom: 20px; }
+      .page-wrapper .idea__text__functions {
+        margin-bottom: 20px; }
+        .page-wrapper .idea__text__functions ul {
+          list-style-type: disc;
+          padding: 0 70px;
+          margin-top: 10px; }
+      .page-wrapper .idea__text__mockups {
+        margin-bottom: 20px; }
+        .page-wrapper .idea__text__mockups h1 {
+          margin-bottom: 20px; }
+        .page-wrapper .idea__text__mockups .img-grid {
+          display: flex;
+          flex-direction: row;
+          align-items: center; }
+          .page-wrapper .idea__text__mockups .img-grid__wrapper {
+            flex: 1;
+            transition: all 1s;
+            padding: 0 10px; }
+          .page-wrapper .idea__text__mockups .img-grid img {
+            transition: all 1s ease-in-out;
+            width: 100%;
+            cursor: pointer; }
+        @media (max-width: 767px) {
+          .page-wrapper .idea__text__mockups .img-grid {
+            flex-direction: column; } }
+      .page-wrapper .idea__text__tags {
+        align-self: flex-end;
+        margin: 30px 0 10px 0; }
+        .page-wrapper .idea__text__tags div {
+          font-size: 0.8em;
+          padding: 5px 12px;
+          margin: 0 7px;
+          border-radius: 15px;
+          display: inline-block;
+          background-color: #f0f317;
+          cursor: pointer; }
     .page-wrapper .idea__footer {
       padding: 20px 10px;
       line-height: 30px;
@@ -257,6 +314,11 @@ nav {
       .page-wrapper .idea__footer__comments {
         float: right;
         padding-right: 10px; }
+        .page-wrapper .idea__footer__comments .comment-icon {
+          color: rgba(120, 40, 200, 0);
+          background-image: url("../img/comments.png");
+          background-size: contain;
+          background-repeat: no-repeat; }
       .page-wrapper .idea__footer hr {
         width: 80%;
         border: 1px solid #d9d9d9; }
@@ -282,26 +344,79 @@ nav {
     margin-top: 30px;
     font-size: 1.2em;
     color: #333; }
+    .page-wrapper .single-idea-section .comments .answer-block {
+      margin: 20px 0; }
+    .page-wrapper .single-idea-section .comments .comments-block {
+      margin: 10px 0 0 0;
+      border-bottom: 1px solid #eee;
+      padding: 8px 0; }
+      .page-wrapper .single-idea-section .comments .comments-block:last-of-type {
+        border: 0; }
+    .page-wrapper .single-idea-section .comments .flex-item {
+      flex: 2; }
     .page-wrapper .single-idea-section .comments .avatar {
-      flex-grow: 2; }
-      .page-wrapper .single-idea-section .comments .avatar .avatar-wrapper {
+      flex-grow: 1; }
+      .page-wrapper .single-idea-section .comments .avatar__wrapper {
         background: url(../img/profile.jpg);
         background-position: center;
         background-size: cover;
         margin: 0 auto;
-        width: 100%;
-        height: 100%;
-        max-height: 100px;
-        max-width: 100px;
+        width: 100px;
+        height: 100px;
         border: 1px solid #ddd;
         border-radius: 100px; }
+      @media (max-width: 767px) {
+        .page-wrapper .single-idea-section .comments .avatar__wrapper {
+          width: 50px;
+          height: 50px; } }
+      .page-wrapper .single-idea-section .comments .avatar__username {
+        font-size: 0.65em;
+        text-align: center;
+        margin: 0 auto; }
     .page-wrapper .single-idea-section .comments .input-place {
-      flex-grow: 5; }
+      font-size: 0.9em;
+      display: flex;
+      border-collapse: collapse;
+      width: 100%; }
       .page-wrapper .single-idea-section .comments .input-place textarea {
-        font-size: 1em;
-        width: 100%;
+        flex: 8;
+        font: inherit;
+        font-size: 0.8em;
         padding: 10px;
-        height: 100px;
-        border: 1px solid #ddd; }
+        padding-top: 0;
+        height: 150px;
+        border: 1px solid #ccc;
+        resize: none;
+        outline: none;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px; }
+      .page-wrapper .single-idea-section .comments .input-place__button {
+        flex: 1;
+        text-align: center;
+        font-size: 0.7em;
+        padding: 58px 0;
+        background-color: #fafafa;
+        border: 1px solid #ccc;
+        cursor: pointer;
+        transition: all 0.5s;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px; }
+        .page-wrapper .single-idea-section .comments .input-place__button:hover {
+          background-color: #f0f317; }
+      @media (max-width: 767px) {
+        .page-wrapper .single-idea-section .comments .input-place__button {
+          width: 90%; } }
+    .page-wrapper .single-idea-section .comments .comment {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      flex-grow: 3;
+      font-size: 0.75em;
+      border-radius: 15px;
+      padding: 0 10px; }
+      .page-wrapper .single-idea-section .comments .comment__date {
+        font-size: 0.7em;
+        color: #888;
+        align-self: flex-end; }
 
 /*# sourceMappingURL=styles.css.map */
