--- a/css/styles.scss
+++ b/css/styles.scss
@@ -91,8 +91,13 @@ button:disabled {
 
 .row {
     display: flex;
+    align-items: stretch;
     margin-left: -25px;
     margin-right: -25px;
+}
+
+.mockup-full-width {
+    flex: 10 !important;
 }
 
 $headerHeight: 80px;
@@ -108,6 +113,7 @@ nav {
     width: 100%;
     background-color: $navColor;
     font-size: 18px;
+    box-shadow: 0 1px 5px 0 rgba(84, 83, 81, 0.68);
 
     .nav-wrapper {
         width: 70%;
@@ -184,10 +190,9 @@ nav {
             box-shadow: 0 10px 15px 0 rgba(84, 83, 81, 0.68);
 
             li {
-                padding: 8px 18px;
                 cursor: pointer;
                 border-bottom: 1px solid #eee;
-                font-size: 0.85em;
+                font-size: 0.8em;
 
                 &:last-of-type {
                     border-top: 1px solid #eee;
@@ -199,6 +204,8 @@ nav {
                 }
 
                 a {
+                    display: block;
+                    padding: 8px 18px;
                     color: #333;
                     text-decoration: none;
                 }
@@ -366,7 +373,89 @@ nav {
         }
 
         &__text {
-            padding-top: 20px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            $indent: 20px;
+
+            margin-top: $indent;
+
+            h1 {
+                font-size: 1.4em;
+                font-weight: 600;
+            }
+
+            h2 {
+                font-size: 1.2em;
+                font-weight: 600;
+            }
+
+            h3 {
+                margin: 5px 0;
+                font-size: 1em;
+                font-weight: 600;
+            }
+
+            &__main {
+                margin-bottom: $indent;
+            }
+
+            &__functions {
+                margin-bottom: $indent;
+
+                ul {
+                    list-style-type: disc;
+                    padding: 0 70px;
+                    margin-top: 10px;
+                }
+            }
+
+            &__mockups {
+                margin-bottom: $indent;
+
+                h1 {
+                    margin-bottom: $indent;
+                }
+
+                .img-grid {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+
+                    &__wrapper {
+                        flex: 1;
+                        transition: all 1s;
+                        padding: 0 10px;
+                    }
+
+                    img {
+                        transition: all 1s ease-in-out;
+                        width: 100%;
+                        cursor: pointer;
+                    }
+                }
+                
+                @media (max-width: 767px) {
+                    .img-grid {
+                        flex-direction: column;
+                    }
+                }
+            }
+
+            &__tags {
+                align-self: flex-end;
+                margin: 30px 0 10px 0;
+
+                div {
+                    font-size: 0.8em;
+                    padding: 5px 12px;
+                    margin: 0 7px;
+                    border-radius: 15px;
+                    display: inline-block;
+                    background-color: $navColor;
+                    cursor: pointer;
+                }
+            }
         }
 
         &__footer {
@@ -397,6 +486,13 @@ nav {
             &__comments {
                 float: right;
                 padding-right: 10px;
+
+                .comment-icon {
+                    color: rgba(120, 40, 200, 0);
+                    background-image: url('../img/comments.png');
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                }
             }
 
             hr {
@@ -443,32 +539,112 @@ nav {
             font-size: 1.2em;
             color: #333;
 
-            .avatar {
-                flex-grow: 2;
+            .answer-block {
+                margin: 20px 0;
+            }
 
-                .avatar-wrapper {
+            .comments-block {
+                margin: 10px 0 0 0;
+                border-bottom: 1px solid #eee;
+                padding: 8px 0;
+
+                &:last-of-type {
+                    border: 0;
+                }
+            }
+
+            .flex-item {
+                flex: 2;
+            }
+
+            .avatar {
+                flex-grow: 1;
+
+                &__wrapper {
                     background: url(../img/profile.jpg);
                     background-position: center;
                     background-size: cover;
                     margin: 0 auto;
-                    width: 100%;
-                    height: 100%;
-                    max-height: 100px;
-                    max-width: 100px;
+                    width: 100px;
+                    height: 100px;
                     border: 1px solid #ddd;
                     border-radius: 100px;
+                }
+
+                @media (max-width: 767px) {
+                    &__wrapper {
+                        width: 50px;
+                        height: 50px;
+                    }
+                }
+
+                &__username {
+                    font-size: 0.65em;
+                    text-align: center;
+                    margin: 0 auto;
                 }
             }
 
             .input-place {
-                flex-grow: 5;
+                font-size: 0.9em;
+                display: flex;
+                border-collapse: collapse;
+                width: 100%;
+
+                $border: #ccc;
+                $radius: 5px;
 
                 textarea {
-                    font-size: 1em;
-                    width: 100%;
+                    flex: 8;
+                    font: inherit;
+                    font-size: 0.8em;
                     padding: 10px;
-                    height: 100px;
-                    border: 1px solid #ddd;
+                    padding-top: 0;
+                    height: 150px;
+                    border: 1px solid $border;
+                    resize: none;
+                    outline: none;
+                    border-top-left-radius: $radius;
+                    border-bottom-left-radius: $radius;
+                }
+
+                &__button {
+                    flex: 1;
+                    text-align: center;
+                    font-size: 0.7em;
+                    padding: 58px 0;
+                    background-color: #fafafa;
+                    border: 1px solid $border;
+                    cursor: pointer;
+                    transition: all 0.5s;
+                    border-top-right-radius: $radius;
+                    border-bottom-right-radius: $radius;
+
+                    &:hover {
+                        background-color: $navColor;
+                    }
+                }
+
+                @media (max-width: 767px) {
+                    &__button {
+                        width: 90%;
+                    }
+                }
+            }
+
+            .comment {
+                display: flex;
+                justify-content: space-between;
+                flex-direction: column;
+                flex-grow: 3;
+                font-size: 0.75em;
+                border-radius: 15px;
+                padding: 0 10px;
+
+                &__date {
+                    font-size: 0.7em;
+                    color: #888;
+                    align-self: flex-end;
                 }
             }
         }
